# room_price_genie

./: README.md  install.sh  pyproject.toml
config/: config.json
db/: rpg.db
src/devel.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/docs/: DATA_VALIDATION_RULES.md  INGESTION_LOGIC.MD
src/docs/export_samples/: kpi_1035_2026_05_01_to_2026_05_31.csv  kpi_1035_2026_05_01_to_2026_05_31.html
src/room_price_genie.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/rpg/: __main__.py
src/rpg/cli/: rpg.py
src/rpg/cli/art/: logo.txt
src/rpg/db_engine/: db_engine_base.py  db_engine_factory.py  duckdb_engine.py
src/rpg/extract/: api_extract_engine.py  extract_engine_base.py  local_extract_engine.py
src/rpg/html_template/: template.html
src/rpg/pipeline/: kpi_calculator.py  pipeline.py  pipeline_context.py  runner.py  scheduler.py
src/rpg/sql/: 01__ddl__inventory.sql  02__ddl__reservation_imports.sql  03__ddl__reservation_stay_dates.sql  04__ddl__rejected_imports.sql  05__view__reservations.sql  06__view__kpi.sql
src/rpg/utils/: datetime_util.py  hash_util.py  io_util.py  json_util.py  logger.py  string_util.py  validation_util.py
