[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "room_price_genie"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "duckdb>=1.4.0",
  "pandas>=2.3.0",
  "jinja2>=3.1.0",
  "jsonschema>=4.26.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
rpg = "rpg.cli.rpg:main"